Completed the initial draft of the entire website.
Also synchronized to the upstream commit 5577c3cda88038dc2a8c20208f468da0e3491da0.

--- a/ko-KR/index.html
+++ b/ko-KR/index.html
@@ -12,7 +12,7 @@ title: Rust 프로그래밍 언어
           스레드 안전성을 보장하는
           시스템 프로그래밍 언어입니다.
           <br/>
-          <a href="https://doc.rust-lang.org/book/README.html">더 알려 주세요!</a>
+          <b><a href="friends.html">누가 Rust를 쓰는지 알아 보세요.</a></b>
         </p>
       </div>
       <div class="col-md-4 install-box">
