--- a/ko-KR/downloads.html
+++ b/ko-KR/downloads.html
@@ -166,6 +166,15 @@ title: 다운로드 &middot; Rust 프로그래밍 언어
 
     <hr/>
 
+     <div class="row">
+      <div class="col-md-12">
+        <p>셸 스크립트로 설치했을 경우 다음을 실행해서 삭제할 수 있습니다:</p>
+        <pre><code>curl -sSf https://static.rust-lang.org/rustup.sh | sh -s -- --uninstall</code></pre>
+      </div>
+    </div>
+
+    <hr/>
+
     <div class="row">
       <div class="col-md-12">
 	<a id="win-foot"></a>
