--- a/ko-KR/security.html
+++ b/ko-KR/security.html
@@ -1,100 +1,97 @@
 ---
-layout: default
-title: Rust Security Policy &middot; The Rust Programming Language
+layout: ko-KR/default
+title: Rust 보안 정책 &middot; Rust 프로그래밍 언어
 ---
 
-<h1>Rust Security Policy</h1>
+<h1>Rust 보안 정책</h1>
 
-<h2>Reporting a Bug</h2>
+<h2>버그 보고하기</h2>
 
-<p>Safety is one of the core principles of Rust, and to that end, we would
-like to ensure that Rust has a secure implementation. Thank you for taking the
-time to responsibly disclose any issues you find.</p>
+<p>안전성은 Rust의 주 원칙 중 하나이며,
+이를 따라 저희는 Rust의 구현이 안전하다는 걸 확실히 하려 합니다.
+찾으신 문제를 책임을 가지고 공표하는 데 시간을 들여 주셔서 감사드립니다.</p>
 
-<p>All security bugs in the Rust distribution should be reported by email to
-<a href="mailto:security@rust-lang.org">security@rust-lang.org</a>. This list
-is delivered to a small security team. Your email will be acknowledged within 24
-hours, and you'll receive a more detailed response to your email within 48
-hours indicating the next steps in handling your report. If you would like, you
-can encrypt your report using <a href="../rust-security-team-key.gpg.ascii">our public key</a>.
-This key is also <a
-href="https://pgp.mit.edu/pks/lookup?op=vindex&amp;search=0xEFB9860AE7520DAC">On
-MIT's keyserver</a> and <a href="#key">reproduced below</a>.
+<p>Rust 배포판의 모든 보안 버그는
+<a href="mailto:security@rust-lang.org">security@rust-lang.org</a>에
+이메일로 보고되어야 합니다.
+이 메일링 리스트는 소규모의 보안 팀에게 배달됩니다.
+24시간 안에 여러분의 메일에 답장이 갈 것이고,
+48시간 안에 보고를 처리하는 다음 단계에 대해 더 자세한 응답을 받게 됩니다.
+원하신다면 <a href="../rust-security-team-key.gpg.ascii">저희 공개키</a>로
+보고를 암호화할 수 있습니다.
+이 키는 <a
+href="https://pgp.mit.edu/pks/lookup?op=vindex&amp;search=0xEFB9860AE7520DAC">MIT
+키 서버</a> 및 <a href="#key">이 페이지 아래쪽</a>에서도 찾을 수 있습니다.</p>
 
-<p>This email address receives a large amount of spam, so be sure to use a
-descriptive subject line to avoid having your report be missed. After the
-initial reply to your report, the security team will endeavor to keep you
-informed of the progress being made towards a fix and full announcement. As
-recommended by <a href="https://en.wikipedia.org/wiki/RFPolicy">RFPolicy</a>,
-these updates will be sent at least every five days. In reality, this is more
-likely to be every 24-48 hours.</p>
+<p>이 이메일 주소는 스팸을 많이 받으므로 보고가 유실되지 않도록
+설명이 담긴 제목을 사용해 주세요.
+보고에 대한 첫 답장 뒤 보안 팀은 수정 및 완전한 발표까지의 과정을
+알려 드리도록 노력할 것입니다.
+<a href="https://en.wikipedia.org/wiki/RFPolicy">RFPolicy</a>의 추천에 따라
+최신 정보는 적어도 5일마다 한 번씩 갱신될 것이며,
+현실적으로는 아마 24시간에서 48시간마다 한 번 갱신될 것입니다.</p>
 
-<p>If you have not received a reply to your email within 48 hours, or have not
-heard from the security team for the past five days, there are a few steps you
-can take:</p>
+<p>메일에 대한 답장을 48시간이 지나도록 받지 못 했거나,
+지난 5일간 보안 팀에서 아무 얘기도 듣지 못 했다면 다음을 시도해 볼 수 있습니다:</p>
 
 <ul>
-    <li>Contact the current security coordinator (<a href="mailto:steve@steveklabnik.com">Steve Klabnik</a>
-        (<a href="https://pgp.mit.edu/pks/lookup?op=vindex&amp;search=0xDAE717EFE9424541">public key</a>)) directly.</li>
-    <li>Contact the back-up contact (<a href="mailto:andersrb@gmail.com">Brian Anderson</a>
-        (<a href="https://pgp.mit.edu/pks/lookup?op=vindex&amp;search=0x16457A6368CFF26F">public key</a>)) directly.</li>
-    <li>Post on the <a href="https://internals.rust-lang.org/">internals forums</a>
-    or ask in the #rust-internals IRC room on irc.mozilla.org.</li>
+    <li>현 보안 조정자(<a href="mailto:steve@steveklabnik.com">Steve Klabnik</a>
+        (<a href="https://pgp.mit.edu/pks/lookup?op=vindex&amp;search=0xDAE717EFE9424541">공개키</a>))에게 직접 연락해 봅니다.</li>
+    <li>백업 연락처(<a href="mailto:andersrb@gmail.com">Brian Anderson</a>
+        (<a href="https://pgp.mit.edu/pks/lookup?op=vindex&amp;search=0x16457A6368CFF26F">공개키</a>))로 직접 연락해 봅니다.</li>
+    <li><a href="https://internals.rust-lang.org/">내부(internals) 포럼</a>에 글을 올리거나
+    irc.mozilla.org의 #rust-internals IRC 채팅방에서 물어 봅니다.</li>
 </ul>
 
-<p>Please note that the discussion forums and #rust-internals IRC channel are
-public areas. When escalating in these venues, please do not discuss your
-issue. Simply say that you're trying to get a hold of someone from the security
-team.</p>
+<p>토론 포럼 및 #rust-internals IRC 채널은 공개 장소라는 점을 알려 드립니다.
+이 곳들로 장소를 넓힐 때 문제를 언급하지 말아 주세요.
+그냥 보안 팀 아무한테나 연락을 하려 한다고만 말하세요.</p>
 
-<h2>Disclosure Policy</h2>
+<h2>공표 정책</h2>
 
-<p>The Rust project has a 5 step disclosure process.</p>
+<p>Rust 프로젝트는 다섯 단계의 공표 절차를 가지고 있습니다.</p>
 
 <ol>
-<li>The security report is received and is assigned a primary handler. This
-person will coordinate the fix and release process.</li>
+<li>보안 보고를 받은 뒤 주 담당자에게 할당됩니다.
+이 사람이 수정 및 릴리스 과정을 조정할 것입니다.</li>
 
-<li>The problem is confirmed and a list of all affected versions is determined.</li>
+<li>문제가 입증되고 어느 버전들이 영향을 받았는지 확인됩니다.</li>
 
-<li>Code is audited to find any potential similar problems.</li>
+<li>잠재적으로 비슷한 문제들이 있는지 코드를 감사합니다.</li>
 
-<li>Fixes are prepared for all releases which are still under maintenance.
-These fixes are not committed to the public repository but rather held locally
-pending the announcement.</li>
+<li>아직 유지보수 중인 모든 릴리스에 대한 수정이 준비됩니다.
+이 수정은 공개 저장소에 커밋되지 않으며 발표 전까지 로컬에 유지됩니다.</li>
 
-<li>On the embargo date, the <a href="https://groups.google.com/forum/#!forum/rustlang-security-announcements">
-Rust security mailing list</a> is sent a copy of the announcement. The changes
-are pushed to the public repository and new builds are deployed to
-rust-lang.org.  Within 6 hours of the mailing list being notified, a copy of
-the advisory will be published on the Rust blog.</li> </ol>
+<li>보도 금지(엠바고)가 풀리는 날짜에
+<a href="https://groups.google.com/forum/#!forum/rustlang-security-announcements">
+Rust 보안 메일링 리스트</a>에 발표의 사본이 올라갑니다.
+공개 저장소에 변경점이 올라가고 rust-lang.org에 새 빌드가 배치됩니다.
+메일링 리스트에 공지된지 6시간 안에 Rust 블로그에 보고의 사본이 올라갈 것입니다.</li> </ol>
 
-<p>This process can take some time, especially when coordination is required
-with maintainers of other projects. Every effort will be made to handle the bug
-in as timely a manner as possible, however it's important that we follow the
-release process above to ensure that the disclosure is handled in a consistent
-manner.</p>
+<p>이 과정에는, 특히 다른 프로젝트의 관리자들과 조정이 필요할 경우 시간이 걸릴 수 있습니다.
+가능한한 버그를 빠르게 처리하려 노력하겠지만,
+공표가 일관된 방법으로 처리될 수 있도록 위의 릴리스 과정을 따르는 것은 중요합니다.</p>
 
-<h2>Receiving Security Updates</h2>
+<h2>보안 소식을 받기</h2>
 
-<p>The best way to receive all the security announcements is to subscribe to
-the <a
+<p>모든 보안 발표를 받는 가장 좋은 방법은 <a
 href="https://groups.google.com/forum/#!forum/rustlang-security-announcements">Rust
-security announcements mailing list</a>. The mailing list is very low traffic,
-and it receives the public notifications the moment the embargo is lifted.</p>
+보안 발표 메일링 리스트</a>를 구독하는 것입니다.
+이 메일링 리스트에는 아주 적은 양의 메일만 송신되며
+보도 금지가 풀리는 시점에 공개 알림을 받게 됩니다.</p>
 
-<h3>Advance notification</h3>
+<h3>미리 알림받기</h3>
 
-<p>We will announce vulnerabilities 72 hours before the embargo is lifted to
-<a href="http://oss-security.openwall.org/wiki/mailing-lists/distros">distros@openwall</a>,
-so that Linux distributions can update their packages.</p>
+<p>저희는 리눅스 배포판들이 패키지를 갱신할 수 있도록 보도 금지가 풀리기 72시간 전에
+<a href="http://oss-security.openwall.org/wiki/mailing-lists/distros">distros@openwall</a>에
+보안 취약점을 발표할 것입니다.</p>
 
-<h2>Comments on This Policy</h2>
+<h2>이 정책에 대한 의견</h2>
 
-<p>If you have any suggestions to improve this policy, please send an email to
-<a href="mailto:security@rust-lang.org">security@rust-lang.org</a>.</p>
+<p>이 정책을 개선하기 위한 의견이 있다면
+<a href="mailto:security@rust-lang.org">security@rust-lang.org</a>로 메일을 보내 주세요.</p>
 
-<h2 id="key">Plaintext PGP Key</h2>
+<h2 id="key">평문 PGP 키</h2>
 
 <pre><code>-----BEGIN PGP PUBLIC KEY BLOCK-----
 Version: GnuPG v1
